--- a/assets/css/layouts/_header.scss
+++ b/assets/css/layouts/_header.scss
@@ -1,20 +1,15 @@
 .header {
   width: 100%;
   min-height: 15vh;
-  background: green;
+  background: $primaryColour;
   display: flex;
   justify-content: center;
   align-items: center;
 
-  & > img {
-    width: 200px;
-    height: auto;
-    @include display-md {
-      width: 240px;
-    }
-    @include  display-lg {
-      width: 280px;
-    }
+  & > h1 {
+    color: $secondaryColour;
+    font-family: "Montserrat", sans-serif;
+    font-weight: bold;
   }
 
 }
