--- a/assets/css/utils/_variables.scss
+++ b/assets/css/utils/_variables.scss
@@ -3,8 +3,11 @@ $secondaryColour: #fdcb46;
 $menu1Bg: #fcdfdb;
 $menu1Font: #3c1218;
 $menu2Bg: #fff5fe;
-$menu2Font: #c77412;
+$menu2Font1: #c77412;
+$menu2Font2: #905bfd;
 $menu3Bg: #f9f9f9;
-$menu3Font: #0887fb;
+$menu3Font1: #0431df;
+$menu3Font2: #0887fb;
 $menu4Bg: #fdfffd;
-$menu4Font: #fdfffd;
+$menu4Font1: #72bf56;
+$menu4Font2: #d9fdb8;
