--- a/assets/css/pages/_index.scss
+++ b/assets/css/pages/_index.scss
@@ -8,9 +8,9 @@
   &--next {
     margin-bottom: 50px;
     padding: 0;
-    background: green;
+    background: $primaryColour;
     border-radius: 10px;
-    color: yellow;
+    color: $secondaryColour;
     width: 200px;
     text-align: center;
     & > h4 {
