--- a/assets/css/layouts/_header.scss
+++ b/assets/css/layouts/_header.scss
@@ -1,6 +1,6 @@
 .header {
   width: 100%;
-  min-height: 15vh;
+  height: 15%;
   background: $primaryColour;
   display: flex;
   justify-content: center;
