--- a/assets/css/utils/_mixins.scss
+++ b/assets/css/utils/_mixins.scss
@@ -1,9 +1,9 @@
 @mixin display-md {
-  @media all and (max-width: 1999px) and (min-width: 768px) { @content; }
+  @media all and (min-width: 1217px) { @content; }
 }
 
-@mixin display-lg {
-  @media all and (min-width: 1200px) { @content; }
+@mixin display-sm {
+  @media all and (min-width: 768px) and (max-width: 1216px) { @content; }
 }
 
 @mixin fontBgGradient-2 {
