--- a/assets/css/base/_base.scss
+++ b/assets/css/base/_base.scss
@@ -1,6 +1,7 @@
 html body {
   width: 100%;
   height: 100%;
+  min-height: 100vh;
   padding: 0;
   margin: 0;
 }
@@ -11,4 +12,13 @@ h2 {
 
 p {
   margin: 0;
+}
+
+main {
+  width: 100%;
+  height: 100%;
+}
+
+body {
+  position: relative;
 }
