--- a/assets/css/base/_typography.scss
+++ b/assets/css/base/_typography.scss
@@ -1,12 +1,13 @@
 html body {
   font-family: 'Montserrat', sans-serif;
-  font-size: 3vw;
+  font-size: 4vw;
+
+  @include display-sm {
+    font-size: 3vw;
+  }
 
   @include display-md {
-    font-size: 2.2vw;
-  }
-  @include display-lg {
-    font-size: 1.3vw;
+    font-size: 2.4vw;
   }
 }
 
@@ -17,4 +18,49 @@ html body {
   url("/assets/fonts/c455d94eee43dc4ceeb83c0c0fd0d4c8.woff") format("woff"), /* chrome、firefox */
   url("/assets/fonts/c455d94eee43dc4ceeb83c0c0fd0d4c8.ttf") format("truetype"), /* chrome、firefox、opera、Safari, Android, iOS 4.2+*/
   url("/assets/fonts/c455d94eee43dc4ceeb83c0c0fd0d4c8.svg#Segoe Print V1") format("svg"); /* iOS 4.1- */
+}
+
+.menu--1-txt {
+  & > i {
+    color: red;
+  }
+  & > p {
+    font-family: 'Devonshire', cursive;
+  }
+  & > h2 {
+    font-family: "Segoe Print";
+    text-transform: uppercase;
+  }
+}
+
+.menu--2-txt {
+  & > p {
+    font-family: 'Croissant One', cursive;
+    @include fontBgGradient-2;
+  }
+  & > h2 {
+    font-family: 'Frank Ruhl Libre', serif;
+    font-weight: bold;
+  }
+}
+
+.menu--3-txt {
+  & > p {
+    font-family: 'Dancing Script', cursive;
+    @include fontBgGradient-3;
+  }
+
+  & > h2 {
+    font-family: "Segoe Print";
+  }
+}
+
+.menu--4-txt {
+  & > p {
+    font-family: 'Kaushan Script', cursive;
+    @include fontBgGradient-4;
+  }
+  & > h2 {
+    font-family: "Segoe Print";
+  }
 }
