--- a/assets/css/layouts/_menus.scss
+++ b/assets/css/layouts/_menus.scss
@@ -1,19 +1,35 @@
 .main--menus {
   width: 100%;
-  min-height: 65vh;
-  padding: 50px 0 50px 0;
+  min-height: 60%;
+  height: auto;
   display: flex;
-  justify-content: space-around;
   align-items: center;
+  justify-content: center;
   flex-wrap: wrap;
+  padding: 50px;
+  @include display-md {
+    padding: 100px;
+  }
   &-single {
-    width: 80%;
-    margin: 0;
+    & > div {
+      width: 100%;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      opacity: 1;
+      transition: all ease-in-out 350ms;
+      &:hover {
+        transform: scale(1.2);
+        opacity: 0.6;
+        transition: all ease-in-out 350ms;
+        transform-origin: 50% 50%;
+      }
+    }
+
     @include display-md {
       width: 40%;
-    }
-    @include display-lg {
-      width: 20%;
     }
   }
 
@@ -22,72 +38,55 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: auto;
     -webkit-box-shadow: 0px 0px 14px 4px rgba(0,0,0,0.20);
     -moz-box-shadow: 0px 0px 14px 4px rgba(0,0,0,0.20);
     box-shadow: 0px 0px 14px 4px rgba(0,0,0,0.20);
-    margin-bottom: 50px;
-    width: 80%;
+    margin: 0 30px 50px 30px;
+    width: 70%;
+    height: 700px;
     @include display-md {
       width: 40%;
+      height: 800px;
+      margin: 0 50px 50px 50px;
     }
-    @include display-lg {
-      width: 20%;
+
+    @include display-sm {
+      width: 45%;
+      margin: 0 50px 50px 50px;
     }
+
     text-decoration: none;
     color: inherit;
+
+    & > p {
+      font-size: 3vh;
+      @include display-md {
+        font-size: 3vh;
+      }
+    }
+
+    & > h2 {
+      font-size: 4vh;
+    }
   }
 
   &-1 {
     color: $menu1Font !important;
     background: $menu1Bg;
-    & > i {
-      color: red;
-    }
-    & > p {
-      font-family: 'Devonshire', cursive;
-    }
-    & > h2 {
-      font-family: "Segoe Print";
-      text-transform: uppercase;
-    }
   }
 
   &-2 {
     color: $menu2Font1 !important;
     background: $menu2Bg;
-    & > p {
-      font-family: 'Croissant One', cursive;
-      @include fontBgGradient-2;
-    }
-    & > h2 {
-      font-family: 'Frank Ruhl Libre', serif;
-      font-weight: bold;
-    }
   }
 
   &-3 {
     color: $menu3Font2 !important;
     background: $menu3Bg;
-    & > p {
-      font-family: 'Dancing Script', cursive;
-      @include fontBgGradient-3;
-    }
-
-    & > h2 {
-      font-family: "Segoe Print";
-    }
   }
 
   &-4 {
     color: $menu4Font1 !important;
     background: $menu4Bg;
-    & > p {
-      font-family: 'Kaushan Script', cursive;
-      @include fontBgGradient-4;
-    }
-    & > h2 {
-      font-family: "Segoe Print";
-    }
   }
 }
