--- a/assets/css/pages/_index.scss
+++ b/assets/css/pages/_index.scss
@@ -1,21 +1,48 @@
 .main {
   width: 100%;
+  min-height: 85%;
+  height: 85%;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
 
+
   &--next {
-    margin-bottom: 50px;
+    margin-bottom: 120px;
     padding: 0;
     background: $primaryColour;
     border-radius: 10px;
     color: $secondaryColour;
-    width: 200px;
     text-align: center;
-    & > h4 {
+
+    & > div {
       padding: 0;
       margin: 10px 30px 10px 30px;
+      &:after {
+        content: ' .';
+        animation: dots 1s steps(5, end) infinite;
+      }
+
+      @keyframes dots {
+        0%, 20% {
+          color: rgba(0,0,0,0);
+          text-shadow:
+                  .25em 0 0 rgba(0,0,0,0),
+                  .5em 0 0 rgba(0,0,0,0);}
+        40% {
+          color: $secondaryColour;
+          text-shadow:
+                  .25em 0 0 rgba(0,0,0,0),
+                  .5em 0 0 rgba(0,0,0,0);}
+        60% {
+          text-shadow:
+                  .25em 0 0 white,
+                  .5em 0 0 rgba(0,0,0,0);}
+        80%, 100% {
+          text-shadow:
+                  .25em 0 0 white,
+                  .5em 0 0 white;}}
     }
   }
 }
