--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 html body {
   width: 100%;
   height: 100%;
+  min-height: 100vh;
   padding: 0;
   margin: 0;
 }
@@ -13,18 +14,27 @@ p {
   margin: 0;
 }
 
+main {
+  width: 100%;
+  height: 100%;
+}
+
+body {
+  position: relative;
+}
+
 html body {
   font-family: "Montserrat", sans-serif;
-  font-size: 3vw;
+  font-size: 4vw;
 }
-@media all and (max-width: 1999px) and (min-width: 768px) {
+@media all and (min-width: 768px) and (max-width: 1216px) {
   html body {
-    font-size: 2.2vw;
+    font-size: 3vw;
   }
 }
-@media all and (min-width: 1200px) {
+@media all and (min-width: 1217px) {
   html body {
-    font-size: 1.3vw;
+    font-size: 2.4vw;
   }
 }
 
@@ -35,9 +45,51 @@ html body {
   src: url("/assets/fonts/c455d94eee43dc4ceeb83c0c0fd0d4c8.eot?#iefix") format("embedded-opentype"), url("/assets/fonts/c455d94eee43dc4ceeb83c0c0fd0d4c8.woff2") format("woff2"), url("/assets/fonts/c455d94eee43dc4ceeb83c0c0fd0d4c8.woff") format("woff"), url("/assets/fonts/c455d94eee43dc4ceeb83c0c0fd0d4c8.ttf") format("truetype"), url("/assets/fonts/c455d94eee43dc4ceeb83c0c0fd0d4c8.svg#Segoe Print V1") format("svg");
   /* iOS 4.1- */
 }
+.menu--1-txt > i {
+  color: red;
+}
+.menu--1-txt > p {
+  font-family: "Devonshire", cursive;
+}
+.menu--1-txt > h2 {
+  font-family: "Segoe Print";
+  text-transform: uppercase;
+}
+
+.menu--2-txt > p {
+  font-family: "Croissant One", cursive;
+  background: -webkit-linear-gradient(0deg, #c77412 10%, #905bfd 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.menu--2-txt > h2 {
+  font-family: "Frank Ruhl Libre", serif;
+  font-weight: bold;
+}
+
+.menu--3-txt > p {
+  font-family: "Dancing Script", cursive;
+  background: -webkit-linear-gradient(10deg, #0431df 10%, #0887fb 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.menu--3-txt > h2 {
+  font-family: "Segoe Print";
+}
+
+.menu--4-txt > p {
+  font-family: "Kaushan Script", cursive;
+  background: -webkit-linear-gradient(10deg, #72bf56 10%, #d9fdb8 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
+.menu--4-txt > h2 {
+  font-family: "Segoe Print";
+}
+
 .header {
   width: 100%;
-  min-height: 15vh;
+  height: 15%;
   background: #579c87;
   display: flex;
   justify-content: center;
@@ -51,44 +103,86 @@ html body {
 
 .footer {
   width: 100%;
-  min-height: 10vh;
   background: #579c87;
-  position: sticky;
+  position: fixed;
   display: flex;
   align-items: center;
   color: #fdcb46;
   font-weight: bold;
+  bottom: 0;
+  height: 80px;
 }
 .footer--mentions {
   margin-left: 20px;
+}
+.footer--mentions:hover {
+  animation: 1.4s shake infinite alternate;
+  cursor: pointer;
 }
 .footer--contact {
   position: absolute;
   right: 0;
   margin-right: 20px;
 }
+.footer--contact:hover {
+  animation: 1.4s shake infinite alternate;
+  cursor: pointer;
+}
+@keyframes shake {
+  0% {
+    transform: skewX(-15deg);
+  }
+  5% {
+    transform: skewX(15deg);
+  }
+  10% {
+    transform: skewX(-15deg);
+  }
+  15% {
+    transform: skewX(15deg);
+  }
+  20% {
+    transform: skewX(0deg);
+  }
+  100% {
+    transform: skewX(0deg);
+  }
+}
 
 .main--menus {
   width: 100%;
-  min-height: 65vh;
-  padding: 50px 0 50px 0;
+  min-height: 60%;
+  height: auto;
   display: flex;
-  justify-content: space-around;
   align-items: center;
+  justify-content: center;
   flex-wrap: wrap;
+  padding: 50px;
 }
-.main--menus-single {
-  width: 80%;
-  margin: 0;
-}
-@media all and (max-width: 1999px) and (min-width: 768px) {
-  .main--menus-single {
-    width: 40%;
+@media all and (min-width: 1217px) {
+  .main--menus {
+    padding: 100px;
   }
 }
-@media all and (min-width: 1200px) {
+.main--menus-single > div {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  opacity: 1;
+  transition: all ease-in-out 350ms;
+}
+.main--menus-single > div:hover {
+  transform: scale(1.2);
+  opacity: 0.6;
+  transition: all ease-in-out 350ms;
+  transform-origin: 50% 50%;
+}
+@media all and (min-width: 1217px) {
   .main--menus-single {
-    width: 20%;
+    width: 40%;
   }
 }
 .main--menus > a {
@@ -96,99 +190,96 @@ html body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  height: auto;
   -webkit-box-shadow: 0px 0px 14px 4px rgba(0, 0, 0, 0.2);
   -moz-box-shadow: 0px 0px 14px 4px rgba(0, 0, 0, 0.2);
   box-shadow: 0px 0px 14px 4px rgba(0, 0, 0, 0.2);
-  margin-bottom: 50px;
-  width: 80%;
+  margin: 0 30px 50px 30px;
+  width: 70%;
+  height: 700px;
   text-decoration: none;
   color: inherit;
 }
-@media all and (max-width: 1999px) and (min-width: 768px) {
+@media all and (min-width: 1217px) {
   .main--menus > a {
     width: 40%;
+    height: 800px;
+    margin: 0 50px 50px 50px;
   }
 }
-@media all and (min-width: 1200px) {
+@media all and (min-width: 768px) and (max-width: 1216px) {
   .main--menus > a {
-    width: 20%;
+    width: 45%;
+    margin: 0 50px 50px 50px;
   }
+}
+.main--menus > a > p {
+  font-size: 3vh;
+}
+@media all and (min-width: 1217px) {
+  .main--menus > a > p {
+    font-size: 3vh;
+  }
+}
+.main--menus > a > h2 {
+  font-size: 4vh;
 }
 .main--menus-1 {
   color: #3c1218 !important;
   background: #fcdfdb;
 }
-.main--menus-1 > i {
-  color: red;
-}
-.main--menus-1 > p {
-  font-family: "Devonshire", cursive;
-}
-.main--menus-1 > h2 {
-  font-family: "Segoe Print";
-  text-transform: uppercase;
-}
 .main--menus-2 {
   color: #c77412 !important;
   background: #fff5fe;
-}
-.main--menus-2 > p {
-  font-family: "Croissant One", cursive;
-  background: -webkit-linear-gradient(0deg, #c77412 10%, #905bfd 100%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-.main--menus-2 > h2 {
-  font-family: "Frank Ruhl Libre", serif;
-  font-weight: bold;
 }
 .main--menus-3 {
   color: #0887fb !important;
   background: #f9f9f9;
 }
-.main--menus-3 > p {
-  font-family: "Dancing Script", cursive;
-  background: -webkit-linear-gradient(10deg, #0431df 10%, #0887fb 100%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-.main--menus-3 > h2 {
-  font-family: "Segoe Print";
-}
 .main--menus-4 {
   color: #72bf56 !important;
   background: #fdfffd;
 }
-.main--menus-4 > p {
-  font-family: "Kaushan Script", cursive;
-  background: -webkit-linear-gradient(10deg, #72bf56 10%, #d9fdb8 100%);
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
-}
-.main--menus-4 > h2 {
-  font-family: "Segoe Print";
-}
 
 .main {
   width: 100%;
+  min-height: 85%;
+  height: 85%;
   display: flex;
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
 }
 .main--next {
-  margin-bottom: 50px;
+  margin-bottom: 120px;
   padding: 0;
   background: #579c87;
   border-radius: 10px;
   color: #fdcb46;
-  width: 200px;
   text-align: center;
 }
-.main--next > h4 {
+.main--next > div {
   padding: 0;
   margin: 10px 30px 10px 30px;
+}
+.main--next > div:after {
+  content: " .";
+  animation: dots 1s steps(5, end) infinite;
+}
+@keyframes dots {
+  0%, 20% {
+    color: rgba(0, 0, 0, 0);
+    text-shadow: 0.25em 0 0 rgba(0, 0, 0, 0), 0.5em 0 0 rgba(0, 0, 0, 0);
+  }
+  40% {
+    color: #fdcb46;
+    text-shadow: 0.25em 0 0 rgba(0, 0, 0, 0), 0.5em 0 0 rgba(0, 0, 0, 0);
+  }
+  60% {
+    text-shadow: 0.25em 0 0 white, 0.5em 0 0 rgba(0, 0, 0, 0);
+  }
+  80%, 100% {
+    text-shadow: 0.25em 0 0 white, 0.5em 0 0 white;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
