--- a/assets/css/layouts/_footer.scss
+++ b/assets/css/layouts/_footer.scss
@@ -9,6 +9,10 @@
   bottom: 0;
   height: 80px;
 
+  & a {
+    text-decoration: none;
+    color: inherit;
+  }
   &--mentions {
     margin-left: 20px;
     &:hover {
