--- a/assets/css/layouts/_header.scss
+++ b/assets/css/layouts/_header.scss
@@ -10,6 +10,7 @@
     color: $secondaryColour;
     font-family: "Montserrat", sans-serif;
     font-weight: bold;
+    margin: 30px 0 30px 0;
   }
 
 }
