--- a/assets/css/pages/_index.scss
+++ b/assets/css/pages/_index.scss
@@ -37,12 +37,12 @@
                   .5em 0 0 rgba(0,0,0,0);}
         60% {
           text-shadow:
-                  .25em 0 0 white,
+                  .25em 0 0 $secondaryColour,
                   .5em 0 0 rgba(0,0,0,0);}
         80%, 100% {
           text-shadow:
-                  .25em 0 0 white,
-                  .5em 0 0 white;}}
+                  .25em 0 0 $secondaryColour,
+                  .5em 0 0 $secondaryColour;}}
     }
   }
 }
