--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,6 +10,10 @@ h2 {
   margin: 0;
 }
 
+h1 {
+  margin: 0;
+}
+
 p {
   margin: 0;
 }
@@ -34,7 +38,7 @@ html body {
 }
 @media all and (min-width: 1217px) {
   html body {
-    font-size: 2.4vw;
+    font-size: 1.7vw;
   }
 }
 
@@ -99,6 +103,7 @@ html body {
   color: #fdcb46;
   font-family: "Montserrat", sans-serif;
   font-weight: bold;
+  margin: 30px 0 30px 0;
 }
 
 .footer {
@@ -111,6 +116,10 @@ html body {
   font-weight: bold;
   bottom: 0;
   height: 80px;
+}
+.footer a {
+  text-decoration: none;
+  color: inherit;
 }
 .footer--mentions {
   margin-left: 20px;
@@ -275,11 +284,72 @@ html body {
     text-shadow: 0.25em 0 0 rgba(0, 0, 0, 0), 0.5em 0 0 rgba(0, 0, 0, 0);
   }
   60% {
-    text-shadow: 0.25em 0 0 white, 0.5em 0 0 rgba(0, 0, 0, 0);
+    text-shadow: 0.25em 0 0 #fdcb46, 0.5em 0 0 rgba(0, 0, 0, 0);
   }
   80%, 100% {
-    text-shadow: 0.25em 0 0 white, 0.5em 0 0 white;
+    text-shadow: 0.25em 0 0 #fdcb46, 0.5em 0 0 #fdcb46;
   }
+}
+
+.menu1 {
+  font-family: "Segoe Print";
+  background: #fcdfdb;
+  height: 100%;
+  width: 100%;
+  font-size: 1.7vw;
+  color: #3c1218;
+  padding: 100px 0 100px 0;
+}
+.menu1 i {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.menu1 h1 {
+  font-family: "Devonshire", cursive;
+  font-size: 3vw;
+}
+.menu1--header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+.menu1--body {
+  width: 100%;
+  margin: 100px 0 100px 0;
+}
+.menu1--body-title {
+  margin: 0 0 100px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+}
+.menu1--body-content {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+}
+.menu1--body-content > div {
+  width: 100%;
+  display: flex;
+}
+.menu1--body-content > div > p {
+  width: 80%;
+  margin: 0 0 0 150px;
+}
+.menu1--body-content > div > span {
+  width: 20%;
+}
+.menu1--footer {
+  display: flex;
+  justify-content: center;
+  width: 100%;
+}
+.menu1--footer > i {
+  margin: 0 20px 0 0;
 }
 
 /*# sourceMappingURL=style.css.map */
