--- a/assets/css/layouts/_menus.scss
+++ b/assets/css/layouts/_menus.scss
@@ -1,16 +1,20 @@
 .main--menus {
+
   width: 100%;
-  min-height: 60%;
-  height: auto;
   display: flex;
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  padding: 50px;
-  @include display-md {
-    padding: 100px;
-  }
+  padding: 80px 0 80px 0;
+
   &-single {
+    -webkit-box-shadow: 0px 0px 14px 4px rgba(0,0,0,0.20);
+    -moz-box-shadow: 0px 0px 14px 4px rgba(0,0,0,0.20);
+    box-shadow: 0px 0px 14px 4px rgba(0,0,0,0.20);
+    width: 350px;
+    height: 550px;
+    margin: 0 30px 60px 30px;
+
     & > div {
       width: 100%;
       height: 100%;
@@ -27,47 +31,11 @@
         transform-origin: 50% 50%;
       }
     }
-
-    @include display-md {
-      width: 40%;
-    }
   }
 
   & > a {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    -webkit-box-shadow: 0px 0px 14px 4px rgba(0,0,0,0.20);
-    -moz-box-shadow: 0px 0px 14px 4px rgba(0,0,0,0.20);
-    box-shadow: 0px 0px 14px 4px rgba(0,0,0,0.20);
-    margin: 0 30px 50px 30px;
-    width: 70%;
-    height: 700px;
-    @include display-md {
-      width: 40%;
-      height: 800px;
-      margin: 0 50px 50px 50px;
-    }
-
-    @include display-sm {
-      width: 45%;
-      margin: 0 50px 50px 50px;
-    }
-
     text-decoration: none;
     color: inherit;
-
-    & > p {
-      font-size: 3vh;
-      @include display-md {
-        font-size: 3vh;
-      }
-    }
-
-    & > h2 {
-      font-size: 4vh;
-    }
   }
 
   &-1 {
