--- a/assets/css/layouts/_menus.scss
+++ b/assets/css/layouts/_menus.scss
@@ -5,15 +5,34 @@
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  padding: 80px 0 80px 0;
+  padding: 60px 0 60px 0;
+
+  @include display-md {
+    padding: 60px 80px 60px 80px;
+  }
+
+  @include display-lg {
+    padding: 60px 150px 60px 150px;
+  }
 
   &-single {
     -webkit-box-shadow: 0px 0px 14px 4px rgba(0,0,0,0.20);
     -moz-box-shadow: 0px 0px 14px 4px rgba(0,0,0,0.20);
     box-shadow: 0px 0px 14px 4px rgba(0,0,0,0.20);
-    width: 350px;
-    height: 550px;
-    margin: 0 30px 60px 30px;
+    width: 250px;
+    height: 400px;
+    margin: 0 50px 40px 50px;
+
+    @include display-md {
+      width: 400px;
+      height: 600px;
+    }
+
+    @include display-lg {
+      width: 400px;
+      height: 600px;
+      margin: 0 70px 60px 70px;
+    }
 
     & > div {
       width: 100%;
