--- a/assets/css/layouts/_footer.scss
+++ b/assets/css/layouts/_footer.scss
@@ -28,7 +28,7 @@
       text-align: left;
     }
     &:hover {
-      animation: 1.4s shake infinite alternate;
+      animation: 600ms shake infinite alternate;
       cursor: pointer;
     }
   }
@@ -45,18 +45,27 @@
       text-align: right;
     }
     &:hover {
-      animation: 1.4s shake infinite alternate;
+      animation: 600ms shake infinite both;
       cursor: pointer;
     }
   }
 
   @keyframes shake {
-    0% { transform: translateX(-10px); }
-    5% { transform: translateX(0); }
-    10% { transform: translateX(10px); }
-    15% { transform: translateX(-10px); }
-    20% { transform: translateX(0); }
-    100% { transform: translateX(10px); }
+    10%, 90% {
+      transform: translateX(-1px);
+    }
+
+    20%, 80% {
+      transform: translateX(3px);
+    }
+
+    30%, 50%, 70% {
+      transform: translateX(-4px);
+    }
+
+    40%, 60% {
+      transform: translateX(4px);
+    }
   }
 
 }
