--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,7 +154,7 @@ h1 {
   }
 }
 .footer--mentions:hover {
-  animation: 1.4s shake infinite alternate;
+  animation: 600ms shake infinite alternate;
   cursor: pointer;
 }
 .footer--contact {
@@ -174,27 +174,21 @@ h1 {
   }
 }
 .footer--contact:hover {
-  animation: 1.4s shake infinite alternate;
+  animation: 600ms shake infinite both;
   cursor: pointer;
 }
 @keyframes shake {
-  0% {
-    transform: translateX(-10px);
+  10%, 90% {
+    transform: translateX(-1px);
   }
-  5% {
-    transform: translateX(0);
+  20%, 80% {
+    transform: translateX(3px);
   }
-  10% {
-    transform: translateX(10px);
+  30%, 50%, 70% {
+    transform: translateX(-4px);
   }
-  15% {
-    transform: translateX(-10px);
-  }
-  20% {
-    transform: translateX(0);
-  }
-  100% {
-    transform: translateX(10px);
+  40%, 60% {
+    transform: translateX(4px);
   }
 }
 
@@ -316,11 +310,20 @@ h1 {
   }
 }
 
+.page--menu1 {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 100%;
+  width: 100%;
+}
+
 .menu1 {
   font-family: "Segoe Print";
   background: #fcdfdb;
-  height: 100%;
-  width: 100%;
+  width: 80%;
+  height: 80%;
   color: #3c1218;
   padding: 100px 0 100px 0;
 }
@@ -329,7 +332,7 @@ h1 {
   align-items: center;
   justify-content: center;
 }
-.menu1 h1 {
+.menu1 h2 {
   font-family: "Devonshire", cursive;
 }
 .menu1--header {
