--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -291,7 +291,7 @@ h1 {
 }
 .main--next > div:after {
   content: " .";
-  animation: dots 1s steps(5, end) infinite;
+  animation: dots 1.5s steps(5, end) infinite;
 }
 @keyframes dots {
   0%, 20% {
@@ -318,14 +318,20 @@ h1 {
   min-height: 100%;
   width: 100%;
 }
+.page--menu1 > h1 {
+  font-size: 36px;
+  color: #353535;
+  margin: 80px 0 30px 0;
+}
 
 .menu1 {
   font-family: "Segoe Print";
   background: #fcdfdb;
   width: 80%;
-  height: 80%;
+  height: 100%;
+  padding: 60px 0 60px 0;
+  margin-bottom: 140px;
   color: #3c1218;
-  padding: 100px 0 100px 0;
 }
 .menu1 i {
   display: flex;
@@ -345,30 +351,60 @@ h1 {
 .menu1--body {
   width: 100%;
   margin: 100px 0 100px 0;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 .menu1--body-title {
   margin: 0 0 100px 0;
   display: flex;
-  justify-content: center;
+  justify-content: space-between;
   align-items: center;
+  width: 80%;
+}
+.menu1--body-title > h3 {
+  position: relative;
+  cursor: pointer;
+  margin: 0 20px 0 20px;
+  width: 40%;
+  text-align: center;
+}
+.menu1--body-title > h3:before {
+  content: "";
+  position: absolute;
+  height: 3px;
+  background: #3c1218;
+  bottom: 0;
+  left: 0;
+  width: 0;
+  transition: width ease-in-out 250ms;
+}
+.menu1--body-title > h3:hover:before {
   width: 100%;
+}
+.menu1--body-title > img {
+  width: 30%;
 }
 .menu1--body-content {
   display: flex;
   flex-direction: column;
-  width: 100%;
+  width: 80%;
 }
 .menu1--body-content > div {
   width: 100%;
   display: flex;
+  justify-content: center;
 }
 .menu1--body-content > div > p {
-  width: 70%;
-  margin: 0 0 0 150px;
+  width: 90%;
 }
 .menu1--body-content > div > span {
-  width: 20%;
+  width: 10%;
   font-weight: bolder;
+}
+.menu1--body-content-3 > div > p {
+  width: 100%;
 }
 .menu1--footer {
   display: flex;
