--- a/assets/css/pages/_menu1.scss
+++ b/assets/css/pages/_menu1.scss
@@ -50,9 +50,13 @@
     &-title {
       margin: 0 0 100px 0;
       display: flex;
-      justify-content: space-between;
+      justify-content: center;
       align-items: center;
-      width: 80%;
+
+      width: 90%;
+      @include display-md {
+        width: 80%;
+      }
       & > h3 {
         position: relative;
         cursor: pointer;
@@ -86,12 +90,32 @@
       & > div {
         width: 100%;
         display: flex;
+        flex-direction: column;
         justify-content: center;
+        align-items: center;
+        flex-wrap: wrap;
+        margin-bottom: 20px;
+        @include display-md {
+          flex-direction: row;
+        }
         & > p {
-          width: 90%;
+          width: 100%;
+          @include display-md {
+            width: 80%;
+          }
+          @include display-lg {
+            width: 80%;
+          }
         }
         & > span {
-          width: 10%;
+          text-align: center;
+          width: 100%;
+          @include display-md {
+            width: 20%;
+          }
+          @include display-lg {
+            width: 20%;
+          }
           font-weight: bolder;
         }
       }
