--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -359,9 +359,14 @@ h1 {
 .menu1--body-title {
   margin: 0 0 100px 0;
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
-  width: 80%;
+  width: 90%;
+}
+@media all and (min-width: 699px) {
+  .menu1--body-title {
+    width: 80%;
+  }
 }
 .menu1--body-title > h3 {
   position: relative;
@@ -394,14 +399,44 @@ h1 {
 .menu1--body-content > div {
   width: 100%;
   display: flex;
+  flex-direction: column;
   justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+  margin-bottom: 20px;
+}
+@media all and (min-width: 699px) {
+  .menu1--body-content > div {
+    flex-direction: row;
+  }
 }
 .menu1--body-content > div > p {
-  width: 90%;
+  width: 100%;
+}
+@media all and (min-width: 699px) {
+  .menu1--body-content > div > p {
+    width: 80%;
+  }
+}
+@media all and (min-width: 992px) {
+  .menu1--body-content > div > p {
+    width: 80%;
+  }
 }
 .menu1--body-content > div > span {
-  width: 10%;
+  text-align: center;
+  width: 100%;
   font-weight: bolder;
+}
+@media all and (min-width: 699px) {
+  .menu1--body-content > div > span {
+    width: 20%;
+  }
+}
+@media all and (min-width: 992px) {
+  .menu1--body-content > div > span {
+    width: 20%;
+  }
 }
 .menu1--body-content-3 > div > p {
   width: 100%;
